2001-11-17  Bruno Haible  <haible@clisp.cons.org>

	* msgfmt.c (accelerator_char): New variable.
	(long_options): --check-accelerators has optional argument.
	(main): Store --check-accelerators value in accelerator_char.
	(usage): --check-accelerators has optional argument.
	(check_pair): Use accelerator_char instead of hardwired '&'.

2001-11-17  Bruno Haible  <haible@clisp.cons.org>

	* msginit.c (main): Print a blank line.
	(get_title): Always use the English title first.
	(fill_header): Update accordingly.

2001-11-17  Bruno Haible  <haible@clisp.cons.org>

	* message.h (NFORMATS): Fix misapplied patch.

2001-11-11  Bruno Haible  <haible@clisp.cons.org>

	* msgfmt.c (check_accelerators): New variable.
	(long_options): Add --check-accelerators.
	(main): Handle --check-accelerators.
	(usage): Document --check-accelerators option.
	(check_pair): Implement check_accelerators handling.

2001-11-11  Bruno Haible  <haible@clisp.cons.org>

	* msgl-cat.c (catenate_msgdomain_list): Fix a typo in 2001-11-01 patch.
	Reported by Karl Eichwalder.

2001-11-11  Bruno Haible  <haible@clisp.cons.org>

	* msginit.c (verbose): Remove variable.
	(long_options): Remove --verbose.
	(main): Remove --verbose option handling.
	(usage): Remove --verbose documentation.
	(language_team_address): Don't pass a verbose option to the subprocess.

2001-11-08  Bruno Haible  <haible@clisp.cons.org>

	* message.h: New enum value format_smalltalk.
	* message.c (format_language): Add value for format_smalltalk.
	(format_language_pretty): Likewise.
	* format.h (formatstring_smalltalk): New declaration.
	* format-ycp.c (formatstring_smalltalk): New variable.
	* format.c (formatstring_parsers): Add value for format_smalltalk.

2001-11-05  Bruno Haible  <haible@clisp.cons.org>

	* format-lisp.c (parse_upto): Remove 'base' argument. It is always 0.
	(format_parse): Update.

	* msgl-equal.c: Include string.h.
	* str-list.c: Likewise.

2001-11-03  Bruno Haible  <haible@clisp.cons.org>
