@@ -1,5 +1,9 @@
 2001-11-17  Bruno Haible  <haible@clisp.cons.org>
 
+	* msgfmt.c (format_directive_message): Finish 2001-08-30 patch.
+
+2001-11-17  Bruno Haible  <haible@clisp.cons.org>
+
 	* msgfmt.c (accelerator_char): New variable.
 	(long_options): --check-accelerators has optional argument.
 	(main): Store --check-accelerators value in accelerator_char.
